# A-guide-to-temporal-complexity-for-fMRI-scientists

./: .nojekyll  BrainDynamics.bib  README.md  Untitled-preview.html  Untitled.out.ipynb  _quarto.yml  index.docx  index.html  index.qmd  index.xml  main.py  notes-preview.html  notes.md  notes.out.ipynb  pyproject.toml
_tex/: BrainDynamics.bib  index.tex
notebooks/: Figures-preview.html  Figures.ipynb  Figures.out.ipynb  Figures.subarticle.xml
notebooks/datafiles/: fMRIComplexityTerms.txt  pubmedsearchresults.txt  wordlist.txt
