[project]
name = "quartomanuscript"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fbm>=0.3.0",
    "numpy>=1.24.4",
    "pillow>=10.4.0",
    "scikit-learn>=1.3.2",
    "wordcloud>=1.9.4",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
